fix: fixed the rabbitmq default user code

--- a/kubernetes/kube-app/rmqdep.yaml
+++ b/kubernetes/kube-app/rmqdep.yaml
@@ -27,9 +27,6 @@ spec:
                   name: app-secret
                   key: rmq-pass
             - name: RABBITMQ_DEFAULT_USER
-              valueFrom:
-                secretKeyRef:
-                  name: app-secret
-                  key: "guest"
+              value: "guest"
 
 
