troubleshooting: Issue with app connection1

--- a/kubernetes/kube-app/vproappdep.yaml
+++ b/kubernetes/kube-app/vproappdep.yaml
@@ -23,8 +23,8 @@ spec:
       initContainers:
         - name: init-mydb
           image: busybox
-          command: ['sh', '-c' , 'until nslookup vprodb-service.default.svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
+          command: ['sh', '-c' , 'until nslookup vprodb.default.svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
         - name: init-memcache
           image: busybox
-          command: ['sh', '-c' , 'until nslookup vprocache01-service.default.svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
+          command: ['sh', '-c' , 'until nslookup vprocache01.default.svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
 
